apps/oddsjunction/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oddsjunction
  namespace: oddsjunction
  labels:
    app: oddsjunction
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oddsjunction
  template:
    metadata:
      labels:
        app: oddsjunction
    spec:
      imagePullSecrets:
        - name: gitlab-registry-credentials
      containers:
        - name: oddsjunction
          image: registry.taxayp.com/taxayp/oddsjunction:af8172c7
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/cache-bust
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/cache-bust
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
